2013-01-21  Dirk Schulze  <dschulze@adobe.com>

        Add build flag for Canvas's Path object (disabled by default)
        https://bugs.webkit.org/show_bug.cgi?id=107473

        Reviewed by Dean Jackson.

        Add CANVAS_PATH build flag to build systems.

        * features.gypi:

2013-01-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled Chromium DEPS to r177956.  Requested by
        thakis_ via sheriffbot.

        * DEPS:

2013-01-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled Chromium DEPS to r177953.  Requested by
        thakis_ via sheriffbot.

        * DEPS:

2013-01-21  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Update the RTCPeerConnection states to match the latest specification
        https://bugs.webkit.org/show_bug.cgi?id=107120

        Reviewed by Adam Barth.

        * src/AssertMatchingEnums.cpp:

2013-01-20  Dominic Mazzoni  <dmazzoni@google.com>

        Make SpeechSynthesis compile in the Chromium port
        https://bugs.webkit.org/show_bug.cgi?id=107382

        Reviewed by Adam Barth.

        Add ENABLE_SPEECH_SYNTHESIS to features.gypi, off by default.

        * features.gypi:

2013-01-20  Yoshifumi Inoue  <yosin@chromium.org>

        Dragging over an element with scrollbars should scroll the element when dragging near edges
        https://bugs.webkit.org/show_bug.cgi?id=39725

        Reviewed by Hajime Morita.

        This patch removes DragScrollTimer used for automatic scrolling of main
        frame drag-and-drop which is now implemented in EventHandler.

        Another patch will remove DragScrollTimer.{cpp,h} and update GYP files to
        make patch size small.

        No tests. Existing test covers this change.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::shouldAutoscrollForDragAndDrop): Added.
        * src/ChromeClientImpl.h:
        (ChromeClientImpl): Changed to add shouldAutoscrollForDragAndDrop().